--- a/BettingApp.Web/Views/Home/Index.cshtml
+++ b/BettingApp.Web/Views/Home/Index.cshtml
@@ -9,7 +9,8 @@
     <base href="/">
 </head>
 <body>
+    TEST
     <div id="app"></div>
-    <script src="./build.js"></script>
+    <script src="~/build.js"></script>
 </body>
 </html>
